layout issues on page reload in cms editor

--- a/h4styles.css
+++ b/h4styles.css
@@ -128,10 +128,13 @@ a{
     margin-left:12px;
 }
 
+/*
 #layout_panes{
     height: 100%;
     width: 100%;
+    position: absolute;
 }
+*/
 
 .tab_ctrl{
     position: absolute;
